creusot/tests/should_fail/bug/436-1.stderr
error[creusot]: called Logic function in Ghost context "prophecy"
  --> 436.rs:15:20
   |
15 |     b.g = ghost!{ !prophecy(b) };
   |                    ^^^^^^^^

error: aborting due to previous error

